<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Service strings -->

    <string translatable="false" name="key_appearance">appearance</string>
    <string translatable="false" name="key_about">about</string>
    <string translatable="false" name="key_app_name">app_name</string>
    <string translatable="false" name="key_app_version">app_version</string>
    <string translatable="false" name="key_app_build_type">app_build_type</string>
    <string translatable="false" name="key_app_license">app_license</string>

    <!-- App strings -->

    <string name="app_name" translatable="false">Genero</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_customers">Customers</string>
    <string name="title_mrps">Materially responsible people</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_app_name">App name</string>
    <string name="title_app_version">Version</string>
    <string name="title_build_type">Build type</string>
    <string name="title_links">Links</string>
    <string name="title_github" translatable="false">GitHub</string>
    <string name="title_website">Website</string>
    <string name="title_appearance">Appearance</string>
    <string name="title_about">About</string>
    <string name="title_license">License</string>
    <string name="summary_appearance">Application appearance settings</string>
    <string name="summary_about">Information about the application</string>
    <string name="summary_license" translatable="false">MIT License | Copyright © 2024 MinersStudios</string>
    <string name="unknown">Unknown</string>

    <string name="app_license" translatable="false">
        MIT License
        \n\n
        Copyright © 2024 MinersStudios
        \n\n
        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:
        \n\n
        The above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.
        \n\n
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
        MIT License
        \n\n
        Copyright © 2024 MinersStudios
        \n\n
        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:
        \n\n
        The above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.
        \n\n
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>
</resources>
